# Denzven-Graphing-Api-Wrapper

./: .LICENCE  README.md  README.rst  setup.cfg  setup.py
DenzvenGraphingApiWrapper/: __init__.py
Denzven_Graphing_Api_Wrapper.egg-info/: PKG-INFO  SOURCES.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: Example_Code_Discord_Bot.py
src/DenzGraphingApiWrapper_py/: __init__.py
src/DenzGraphingApiWrapper_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/DenzGraphingApiWrapper_py_denzven.egg-info/: PKG-INFO  SOURCES.txt
src/Denzven_Graphing_Api_Wrapper/: __init__.py
src/Denzven_Graphing_Api_Wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
