[metadata]
name = DenzGraphingApiWrapper_py-denzven
version = 0.0.3
author = Denzven
author_email = denzvenvadakkan@gmail.com
description = An ApiWrapper for the DenzGraphingApi
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/denzven/DenzGraphingApi_py/issues
    Documentation = https://denzgraphingapiwrapper-py.readthedocs.io/en/latest/
    Source = https://github.com/denzven/DenzGraphingApiWrapper_py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src